src/styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  background-color: #191919;
  color: #BFBFBF;
  font-family: 'Lato', sans-serif;
}

::selection {
  background-color: #FFFFA6;
  color: #191919;
}

a {
  color: inherit;
  text-decoration: none;
}
a:hover {
  color: #FFFFA6;
}

* {
  box-sizing: border-box;
}

h1 {
  font-size: 96px;
  font-weight: 300;
  letter-spacing: 1.5px;
  color: #e5e5e5;
  margin: 0;

} h2 {
  font-size: 60px;
  font-weight: 300;
  letter-spacing: 0.5px;
  color: #e5e5e5;
  margin: 0;

} h3 {
  font-size: 48px;
  font-weight: normal;
  color: #e5e5e5;
  margin: 0;
} h4 {
  font-size: 36px;
  font-weight: normal;
  color: #e5e5e5;
  margin: 0;
} h5 {
  font-size: 24px;
  font-weight: normal;
  color: #e5e5e5;
  margin: 0;
} h6 {
  font-size: 20px;
  font-weight: normal;
  color: #e5e5e5;
  margin: 0;
} p {
  font-size: 16px;
  margin: 0;
}
h1.title {
  font-size: 48px;
  color: #e5e5e5;
  margin: 0;
} 
h1.name {
  font-size: 36px;
  color: #e5e5e5;
  margin: 0;
  text-align: center;
}
.small {
  font-size: 14px;
  color: #BFBFBF;
  margin: 0;
  padding-left: 12px;
}
@media only screen and (max-width: 600px) {
  h1.title {
    font-size: 24px;
  }
  h1.name {
    font-size: 28px;
  }
}

/* width */
::-webkit-scrollbar {
  width: 8px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #1F1F1F;
  border-radius: 4px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #666666;
  border-radius: 4px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #FFFFA6;
}
.icon-btn-hover {
  filter: invert(0%) sepia(3%) saturate(738%) hue-rotate(330deg) brightness(102%) contrast(81%);
}
.icon, .icon-sm {
    /* color: #bfbfbf; */
    filter: brightness(0) saturate(100%) invert(79%) sepia(79%) saturate(1%) hue-rotate(315deg) brightness(85%) contrast(87%);
    width: 36px;
    height: 36px;
    cursor: pointer;
    transition-duration: 0.1s;
    transition-timing-function: linear;
}
.icon-sm {
  filter: invert(99%) sepia(37%) saturate(1762%) hue-rotate(322deg) brightness(112%) contrast(104%);
  width: 16px;
  height: 16px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.my-36 {
  margin-top: 36px;
  margin-bottom: 36px;
}
.h-full {
  height: 100vh;
}
.mt-36 {
  margin-top: 36px;
}

